<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iLitIt</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="youhadyourlastcig">you had your last cigarette</string>
    <string name="intotal">in total you had</string>
    <string name="sinceyoustarted">since you started tracking</string>
    <string name="yoursestimated">your estimated nicotine blood concentration is</string>
    <string name="yoursmeandaily">your mean daily consumption is</string>
    <string name="justhadone">just had one</string>
    <string name="lightermacaddr">connected lighter</string>
    <string name="connectedlighter_none">none</string>
    <string name="clear_all_data">clear all data</string>
    <string name="foget_lastone">forget last cigarette</string>
    <string name="bluetooth_not_enabled">BLE needs to be enabled, finishing application.</string>

</resources>
